---------------------------------------------------------------------------------------------------
Version: 0.3.25
Date: 2025-07-25
  Features:
    - Added dysprosium recipe chain
    - Added new ruthenium alloys
  Changes:
    - Removed noble gases tech and replaced with helium
    - Changed helium recipe ratios
    - Ruthenium powder produced in electrolysis plant
    - Krypton asteroid is now much further away from the sun
---------------------------------------------------------------------------------------------------
Version: 0.3.24
Date: 2025-07-18
  Changes:
    - BREAKING CHANGE: Filtration plant now has 6 inputs instead of 2
    - aqua regia recipe has now 1:3 ratio in its inputs
    - Updated water filtration icons
    - Rockets (military rocket) now require processing units
  Bugfixes:
    - Fixed missing locale
---------------------------------------------------------------------------------------------------
Version: 0.3.23
Date: 2025-07-11
  Features:
    - Added ruthenium recipe chain
    - Added iridium recipe chain
    - Added osmium recipe chain
    - Added late game ion chromatography recipes for rhenium and palladium
  Changes:
    - Reduced output of rhenium recipe
    - Updated rhodium recipe chain
    - Photodiode and photovoltaic cell now require arsenic iodide
  Bugfixes:
    - Fixed locale of recently added items, fluids, recipes and technologies
    - Fixed platinum recipe chain
    - Fixed that some recipes could not be crafted in steel and electric furnace
    - Fast inserter does now not require electronic science
    - Landfill from sand is now unlocked in landfill technology
    - Potassium cyanide can now be crafted on chemical plant
    - Optical sensor now requires cadmium processing
    - Rocket fuel from peroxide now unlocked in rocket silo technology
---------------------------------------------------------------------------------------------------
Version: 0.3.22
Date: 2025-07-04
  Features: