@@ -1,0 +1,1 @@
+Name,strength,britleness,corrosion-resistance,heat-resistance
